--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=WiFiManager
-version=0.12
+version=0.99.9
 author=tzapu
-maintainer=tzapu
-sentence=ESP8266 WiFi Connection manager with fallback web configuration portal
+maintainer=bbx10
+sentence=ESP8266/ESP32 WiFi Connection manager with fallback web configuration portal
 paragraph=Library for configuring ESP8266 modules WiFi credentials at runtime.
 category=Communication
-url=https://github.com/tzapu/WiFiManager.git
-architectures=esp8266
+url=https://github.com/bbx10/WiFiManager.git
+architectures=esp8266,esp32
